Fixed alignment of movie descriptions so they wouldnt be so cramped

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ h5 {
 
 .dates {
   display: inline-block;
-  margin-top: 25px;
+  margin-top: 10px;
   margin-bottom: 40px;
 }
 
